// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app requests GET canonical surah page 1`] = `

<!DOCTYPE html>
<html lang="en">
  <head>
    <title>
      Священный Коран
    </title>
    <meta name="description"
          content="Сайт для удобного чтения Корана в хронологическом порядоке"
    >
    <meta name="keywords"
          content="Коран, читать коран, коран хронологический порядок"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link rel="apple-touch-icon"
          sizes="180x180"
          href="/assets/favicon/apple-touch-icon.png?v=wAXXEkEEYG"
    >
    <link rel="icon"
          type="image/png"
          sizes="32x32"
          href="/assets/favicon/favicon-32x32.png?v=wAXXEkEEYG"
    >
    <link rel="icon"
          type="image/png"
          sizes="16x16"
          href="/assets/favicon/favicon-16x16.png?v=wAXXEkEEYG"
    >
    <link rel="manifest"
          href="/assets/favicon/site.webmanifest?v=wAXXEkEEYG"
    >
    <link rel="mask-icon"
          href="/assets/favicon/safari-pinned-tab.svg?v=wAXXEkEEYG"
          color="#5bbad5"
    >
    <link rel="shortcut icon"
          href="/assets/favicon/favicon.ico?v=wAXXEkEEYG"
    >
    <meta name="msapplication-TileColor"
          content="#da532c"
    >
    <meta name="msapplication-config"
          content="/assets/favicon/browserconfig.xml?v=wAXXEkEEYG"
    >
    <meta name="theme-color"
          content="#ffffff"
    >
    <script src="/assets/main.js">
    </script>
  </head>
  <body class="d-flex flex-column justify-content-between">
    <div class="nav-wrapper">
      <nav class="fixed-top navbar navbar-expand-lg navbar-light border-bottom">
        <a class="navbar-brand"
           href="/"
        >
          Священный Коран
        </a>
        <button class="navbar-toggler"
                type="button"
                data-toggle="collapse"
                data-target="#navbarSupportedContent"
        >
          <span class="navbar-toggler-icon">
          </span>
        </button>
        <div class="collapse navbar-collapse"
             id="navbarSupportedContent"
        >
          <ul class="navbar-nav mr-auto">
          </ul>
          <form class="form-inline my-2 my-lg-0"
                url="/search"
                action="/search"
          >
            <input class="form-control mr-sm-2"
                   type="search"
                   name="q"
                   placeholder="Поиск"
                   aria-label="Поиск"
            >
            <button class="btn btn-outline-success my-2 my-sm-0"
                    type="submit"
            >
              Найти
            </button>
          </form>
        </div>
      </nav>
    </div>
    <main class="container">
      <div class="row justify-content-md-center">
        <div class="col-md-8 col-sm-12">
          <div class="my-3">
            <h1 class="mb-0"
                style="word-break: break-all;"
            >
              <small>
                96. «Сгусток»
              </small>
            </h1>
            <small>
              <i>
                хронолоческий порядок суры &nbsp;1
              </i>
            </small>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="col-md-8 col-sm-12 m-auto">
          <div class="ayat d-flex">
            <div class="d-block">
              <div class="badge badge-dark">
                96:1
              </div>
            </div>
            <div class="p-1"
                 style="font-size: 0.85rem;"
                 id="1"
            >
              (1). Читай! Во имя Господа твоего, который сотворил -
            </div>
          </div>
          <nav aria-label="...">
            <ul class="pagination pagination-sm d-flex justify-content-between mt-4">
              <li class="page-item disabled">
                <a class="page-link"
                   href="#"
                >
                  <span aria-hidden="true">
                    «
                  </span>
                  &nbsp; предыдущая
                </a>
              </li>
              <li class="page-item next">
                <a class="page-link"
                   href="/s/2"
                >
                  следующая &nbsp;
                  <span aria-hidden="true">
                    »
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
      <button class="btn btn-fixed js-to-top-btn d-none btn-dark btn-sm">
        наверх
      </button>
    </main>
    <footer class="footer p-3">
      <p class="text-right">
        <script type="text/javascript">
          (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter45770442 = new Ya.Metrika({ id:45770442, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");
        </script>
        <noscript>
          <div>
            <img src="https://mc.yandex.ru/watch/45770442"
                 style="position:absolute; left:-9999px;"
                 alt
            >
          </div>
        </noscript>
      </p>
      <div class="d-flex align-items-center justify-content-between">
        <div class="text-left">
          <span class="text-muted">
            <small>
              2017-2018 &nbsp;
            </small>
            <a href="/">
              <small>
                Коран в хронологическом порядке
              </small>
            </a>
          </span>
        </div>
        <a href="http://free-quran.ru/">
          <small>
            Бесплатный Коран
          </small>
        </a>
      </div>
    </footer>
  </body>
</html>

`;

exports[`app requests GET index page 1`] = `

<!DOCTYPE html>
<html lang="en">
  <head>
    <title>
      Священный Коран
    </title>
    <meta name="description"
          content="Сайт для удобного чтения Корана в хронологическом порядоке"
    >
    <meta name="keywords"
          content="Коран, читать коран, коран хронологический порядок"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link rel="apple-touch-icon"
          sizes="180x180"
          href="/assets/favicon/apple-touch-icon.png?v=wAXXEkEEYG"
    >
    <link rel="icon"
          type="image/png"
          sizes="32x32"
          href="/assets/favicon/favicon-32x32.png?v=wAXXEkEEYG"
    >
    <link rel="icon"
          type="image/png"
          sizes="16x16"
          href="/assets/favicon/favicon-16x16.png?v=wAXXEkEEYG"
    >
    <link rel="manifest"
          href="/assets/favicon/site.webmanifest?v=wAXXEkEEYG"
    >
    <link rel="mask-icon"
          href="/assets/favicon/safari-pinned-tab.svg?v=wAXXEkEEYG"
          color="#5bbad5"
    >
    <link rel="shortcut icon"
          href="/assets/favicon/favicon.ico?v=wAXXEkEEYG"
    >
    <meta name="msapplication-TileColor"
          content="#da532c"
    >
    <meta name="msapplication-config"
          content="/assets/favicon/browserconfig.xml?v=wAXXEkEEYG"
    >
    <meta name="theme-color"
          content="#ffffff"
    >
    <script src="/assets/main.js">
    </script>
  </head>
  <body class="d-flex flex-column justify-content-between">
    <div class="nav-wrapper">
      <nav class="fixed-top navbar navbar-expand-lg navbar-light border-bottom">
        <a class="navbar-brand"
           href="/"
        >
          Священный Коран
        </a>
        <button class="navbar-toggler"
                type="button"
                data-toggle="collapse"
                data-target="#navbarSupportedContent"
        >
          <span class="navbar-toggler-icon">
          </span>
        </button>
        <div class="collapse navbar-collapse"
             id="navbarSupportedContent"
        >
          <ul class="navbar-nav mr-auto">
          </ul>
          <form class="form-inline my-2 my-lg-0"
                url="/search"
                action="/search"
          >
            <input class="form-control mr-sm-2"
                   type="search"
                   name="q"
                   placeholder="Поиск"
                   aria-label="Поиск"
            >
            <button class="btn btn-outline-success my-2 my-sm-0"
                    type="submit"
            >
              Найти
            </button>
          </form>
        </div>
      </nav>
    </div>
    <main class="container">
      <div class="row justify-content-md-center">
        <div class="col-md-8 col-sm-12">
          <div class="text-center my-5">
            <h1>
              Священный Коран
            </h1>
            <p class="lead mb-0">
              в хронологическом порядке
            </p>
            <small>
              На данный момент доступен только перевод И. Ю. Крачковского.
            </small>
            <br>
            <a class="btn btn-link"
               href="/normal"
            >
              канонический порядок сур
            </a>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="col">
          <ol class="list">
            <li>
              <a class="p-1"
                 style="font-size: 0.85rem;"
                 href="/s/1"
              >
                Сгусток
              </a>
            </li>
          </ol>
        </div>
      </div>
      <button class="btn btn-fixed js-to-top-btn d-none btn-dark btn-sm">
        наверх
      </button>
    </main>
    <footer class="footer p-3">
      <p class="text-right">
        <script type="text/javascript">
          (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter45770442 = new Ya.Metrika({ id:45770442, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");
        </script>
        <noscript>
          <div>
            <img src="https://mc.yandex.ru/watch/45770442"
                 style="position:absolute; left:-9999px;"
                 alt
            >
          </div>
        </noscript>
      </p>
      <div class="d-flex align-items-center justify-content-between">
        <div class="text-left">
          <span class="text-muted">
            <small>
              2017-2018 &nbsp;
            </small>
            <a href="/">
              <small>
                Коран в хронологическом порядке
              </small>
            </a>
          </span>
        </div>
        <a href="http://free-quran.ru/">
          <small>
            Бесплатный Коран
          </small>
        </a>
      </div>
    </footer>
  </body>
</html>

`;

exports[`app requests GET search page 1`] = `

<!DOCTYPE html>
<html lang="en">
  <head>
    <title>
      Священный Коран
    </title>
    <meta name="description"
          content="Сайт для удобного чтения Корана в хронологическом порядоке"
    >
    <meta name="keywords"
          content="Коран, читать коран, коран хронологический порядок"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link rel="apple-touch-icon"
          sizes="180x180"
          href="/assets/favicon/apple-touch-icon.png?v=wAXXEkEEYG"
    >
    <link rel="icon"
          type="image/png"
          sizes="32x32"
          href="/assets/favicon/favicon-32x32.png?v=wAXXEkEEYG"
    >
    <link rel="icon"
          type="image/png"
          sizes="16x16"
          href="/assets/favicon/favicon-16x16.png?v=wAXXEkEEYG"
    >
    <link rel="manifest"
          href="/assets/favicon/site.webmanifest?v=wAXXEkEEYG"
    >
    <link rel="mask-icon"
          href="/assets/favicon/safari-pinned-tab.svg?v=wAXXEkEEYG"
          color="#5bbad5"
    >
    <link rel="shortcut icon"
          href="/assets/favicon/favicon.ico?v=wAXXEkEEYG"
    >
    <meta name="msapplication-TileColor"
          content="#da532c"
    >
    <meta name="msapplication-config"
          content="/assets/favicon/browserconfig.xml?v=wAXXEkEEYG"
    >
    <meta name="theme-color"
          content="#ffffff"
    >
    <script src="/assets/main.js">
    </script>
  </head>
  <body class="d-flex flex-column justify-content-between">
    <div class="nav-wrapper">
      <nav class="fixed-top navbar navbar-expand-lg navbar-light border-bottom">
        <a class="navbar-brand"
           href="/"
        >
          Священный Коран
        </a>
        <button class="navbar-toggler"
                type="button"
                data-toggle="collapse"
                data-target="#navbarSupportedContent"
        >
          <span class="navbar-toggler-icon">
          </span>
        </button>
        <div class="collapse navbar-collapse"
             id="navbarSupportedContent"
        >
          <ul class="navbar-nav mr-auto">
          </ul>
          <form class="form-inline my-2 my-lg-0"
                url="/search"
                action="/search"
          >
            <input class="form-control mr-sm-2"
                   value="читай"
                   type="search"
                   name="q"
                   placeholder="Поиск"
                   aria-label="Поиск"
            >
            <button class="btn btn-outline-success my-2 my-sm-0"
                    type="submit"
            >
              Найти
            </button>
          </form>
        </div>
      </nav>
    </div>
    <main class="container">
      <h5 class="mt-4">
        Количество найденных аятов по запросу&nbsp;
        <i>
          <strong>
            читай:&nbsp;
          </strong>
        </i>
        1
      </h5>
      <div class="mb-4">
        <small class="text-muted">
          Аяты отсортированы в хронологическом порядке.
        </small>
      </div>
      <div class="row">
        <div class="col">
          <ul class="pl-0 list">
            <small>
              <li class="my-1">
                <div class="badge badge-dark">
                  96:1
                </div>
                <a class="p-1 text-muted"
                   href="/s/1#1"
                >
                  (1). Читай! Во имя Господа твоего, который сотворил -
                </a>
              </li>
            </small>
          </ul>
        </div>
      </div>
      <button class="btn btn-fixed js-to-top-btn d-none btn-dark btn-sm">
        наверх
      </button>
    </main>
    <footer class="footer p-3">
      <p class="text-right">
        <script type="text/javascript">
          (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter45770442 = new Ya.Metrika({ id:45770442, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");
        </script>
        <noscript>
          <div>
            <img src="https://mc.yandex.ru/watch/45770442"
                 style="position:absolute; left:-9999px;"
                 alt
            >
          </div>
        </noscript>
      </p>
      <div class="d-flex align-items-center justify-content-between">
        <div class="text-left">
          <span class="text-muted">
            <small>
              2017-2018 &nbsp;
            </small>
            <a href="/">
              <small>
                Коран в хронологическом порядке
              </small>
            </a>
          </span>
        </div>
        <a href="http://free-quran.ru/">
          <small>
            Бесплатный Коран
          </small>
        </a>
      </div>
    </footer>
  </body>
</html>

`;

exports[`app requests GET surah page 1`] = `

<!DOCTYPE html>
<html lang="en">
  <head>
    <title>
      Священный Коран
    </title>
    <meta name="description"
          content="Сайт для удобного чтения Корана в хронологическом порядоке"
    >
    <meta name="keywords"
          content="Коран, читать коран, коран хронологический порядок"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link rel="apple-touch-icon"
          sizes="180x180"
          href="/assets/favicon/apple-touch-icon.png?v=wAXXEkEEYG"
    >
    <link rel="icon"
          type="image/png"
          sizes="32x32"
          href="/assets/favicon/favicon-32x32.png?v=wAXXEkEEYG"
    >
    <link rel="icon"
          type="image/png"
          sizes="16x16"
          href="/assets/favicon/favicon-16x16.png?v=wAXXEkEEYG"
    >
    <link rel="manifest"
          href="/assets/favicon/site.webmanifest?v=wAXXEkEEYG"
    >
    <link rel="mask-icon"
          href="/assets/favicon/safari-pinned-tab.svg?v=wAXXEkEEYG"
          color="#5bbad5"
    >
    <link rel="shortcut icon"
          href="/assets/favicon/favicon.ico?v=wAXXEkEEYG"
    >
    <meta name="msapplication-TileColor"
          content="#da532c"
    >
    <meta name="msapplication-config"
          content="/assets/favicon/browserconfig.xml?v=wAXXEkEEYG"
    >
    <meta name="theme-color"
          content="#ffffff"
    >
    <script src="/assets/main.js">
    </script>
  </head>
  <body class="d-flex flex-column justify-content-between">
    <div class="nav-wrapper">
      <nav class="fixed-top navbar navbar-expand-lg navbar-light border-bottom">
        <a class="navbar-brand"
           href="/"
        >
          Священный Коран
        </a>
        <button class="navbar-toggler"
                type="button"
                data-toggle="collapse"
                data-target="#navbarSupportedContent"
        >
          <span class="navbar-toggler-icon">
          </span>
        </button>
        <div class="collapse navbar-collapse"
             id="navbarSupportedContent"
        >
          <ul class="navbar-nav mr-auto">
          </ul>
          <form class="form-inline my-2 my-lg-0"
                url="/search"
                action="/search"
          >
            <input class="form-control mr-sm-2"
                   type="search"
                   name="q"
                   placeholder="Поиск"
                   aria-label="Поиск"
            >
            <button class="btn btn-outline-success my-2 my-sm-0"
                    type="submit"
            >
              Найти
            </button>
          </form>
        </div>
      </nav>
    </div>
    <main class="container">
      <div class="row justify-content-md-center">
        <div class="col-md-8 col-sm-12">
          <div class="my-3">
            <h1 class="mb-0"
                style="word-break: break-all;"
            >
              <small>
                96. «Сгусток»
              </small>
            </h1>
            <small>
              <i>
                хронолоческий порядок суры &nbsp;1
              </i>
            </small>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="col-md-8 col-sm-12 m-auto">
          <div class="ayat d-flex">
            <div class="d-block">
              <div class="badge badge-dark">
                96:1
              </div>
            </div>
            <div class="p-1"
                 style="font-size: 0.85rem;"
                 id="1"
            >
              (1). Читай! Во имя Господа твоего, который сотворил -
            </div>
          </div>
          <nav aria-label="...">
            <ul class="pagination pagination-sm d-flex justify-content-between mt-4">
              <li class="page-item disabled">
                <a class="page-link"
                   href="#"
                >
                  <span aria-hidden="true">
                    «
                  </span>
                  &nbsp; предыдущая
                </a>
              </li>
              <li class="page-item next">
                <a class="page-link"
                   href="/s/2"
                >
                  следующая &nbsp;
                  <span aria-hidden="true">
                    »
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
      <button class="btn btn-fixed js-to-top-btn d-none btn-dark btn-sm">
        наверх
      </button>
    </main>
    <footer class="footer p-3">
      <p class="text-right">
        <script type="text/javascript">
          (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter45770442 = new Ya.Metrika({ id:45770442, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");
        </script>
        <noscript>
          <div>
            <img src="https://mc.yandex.ru/watch/45770442"
                 style="position:absolute; left:-9999px;"
                 alt
            >
          </div>
        </noscript>
      </p>
      <div class="d-flex align-items-center justify-content-between">
        <div class="text-left">
          <span class="text-muted">
            <small>
              2017-2018 &nbsp;
            </small>
            <a href="/">
              <small>
                Коран в хронологическом порядке
              </small>
            </a>
          </span>
        </div>
        <a href="http://free-quran.ru/">
          <small>
            Бесплатный Коран
          </small>
        </a>
      </div>
    </footer>
  </body>
</html>

`;
